welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: ';' expected but 'if' found.
if(estSurBiscuit) {x=x+1} if (estSurOrange}
                          ^